@@ -1,3 +1,8 @@
+2012-07-19  Joe Mistachkin  <joe@mistachkin.com>
+
+	* generic/tclTest.c: Fix several more missing mutex-locks in
+	TestasyncCmd.
+
 2012-07-19  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
 
 	* generic/tclTest.c: [Bug 3544685]: Missing mutex-lock in
